--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
                     srcset="img/service-hijoma.jpg 1px, img/service-hijoma@2x.jpg 2x"/>
                     <div class="index-services-content">
                         <h3 class="index-services-title">Hijoma</h3>
-                        <p class="index-services-discription">Imom Termiziy Abdulloh ibn Abbos raziyallohu anhumodan rivoyat qilgan hadisda rasululloh sallallohu alayhi va sallam dedilar: «Sizlar hijoma qiladigan kunlaringizning eng yaxshisi 17, 19 va 21-kunlardir» (bu kunlar hijrij-kamariy hisobdagi oylar kunlaridir).</p>
+                        <p class="index-services-discription">Imom Termiziy Abdulloh ibn Abbos raziyallohu anhumodan rivoyat qilgan hadisda rasululloh sallallohu alayhi va sallam dedilar: «Sizlar hijoma qiladigan kunlaringizning eng yaxshisi 17, 19 va 21-kunlardir» (bu kunlar hijriy-kamariy hisobdagi oylar kunlaridir).</p>
                     </div>
                 </li>
                 <li class="index-services-item index-services">
